--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,7 @@
     <string name="ready_to_see_my_results">Ready to see my results</string>
     <string name="start_again">Start again</string>
     <string name="result">RESULT</string>
+    <string name="do_not_cheat">Do not cheat.</string>
+    <string name="when_did_black_mirror_start">When did Black Mirror start?</string>
 
 </resources>
